--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -175,8 +175,15 @@ h1,h2,h3,h4,h5
 	}
 #home h1
     {
-        border: 2px solid #D43F52;
-        color: #D43F52;
+		/* 
+		D6CFB4
+		AAB396
+		A1D6B2
+		A5B68D
+		88C273
+		 */
+        border: 2px solid #A3FFD6;
+        color: #A3FFD6;
         display: inline-block;
         letter-spacing: 6px;
         padding: 25px 35px;
