name color change

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -181,9 +181,11 @@ h1,h2,h3,h4,h5
 		A1D6B2
 		A5B68D
 		88C273
+		A3FFD6
+		FF407D
 		 */
-        border: 2px solid #A3FFD6;
-        color: #A3FFD6;
+        border: 2px solid #FF407D;
+        color: #FF407D;
         display: inline-block;
         letter-spacing: 6px;
         padding: 25px 35px;
